--- a/MeatifyMe-android/res/layout-small-land/main.xml
+++ b/MeatifyMe-android/res/layout-small-land/main.xml
@@ -17,14 +17,6 @@
             android:layout_marginTop="15dp"
             android:text="@string/strBtnNiveis" />
 
-        <Button
-            android:id="@+id/btnCampanha"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="@string/strBtnCampanha" />
-
         <CheckBox
             android:id="@+id/checkSound"
             android:layout_width="wrap_content"
@@ -39,12 +31,20 @@
             android:id="@+id/lblMainmenuDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/btnCampanha"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:gravity="center_horizontal"
             android:text="@string/lblMainMenuDescription"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/btnCampanha"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lblMainmenuDescription"
+            android:layout_centerHorizontal="true"
+            android:text="@string/strBtnCampanha" />
 
     </RelativeLayout>
 
