--- a/MeatifyMe-android/res/layout-large-land/main.xml
+++ b/MeatifyMe-android/res/layout-large-land/main.xml
@@ -15,6 +15,7 @@
             android:layout_below="@+id/btnCampanha"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
+             android:background="@drawable/btn_dlc"
             android:text="@string/strBtnNiveis" />
 
         <TextView
@@ -34,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+             android:background="@drawable/btn_campaign"
             android:text="@string/strBtnCampanha" />
 
         <CheckBox
@@ -46,6 +48,17 @@
             android:text="@string/checkboxTextSound" 
             android:textColor="#000000"/>
 
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btnCampanha"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="14dp"
+            android:scaleType="center"
+            android:src="@drawable/banner" />
     </RelativeLayout>
 
 </LinearLayout>
